# how-to-optimize-gemm-in-cpu

./: CMakeLists.txt
profile/: gemm_1x1_0.txt  gemm_1x1_1.txt  gemm_1x1_2.txt  gemm_1x1_3.txt  gemm_4x1_1.txt  gemm_4x4_2.txt  gemm_4x4_3.txt  gemm_4x4_4.txt  gemm_4x4_5.txt  gemm_8x4_6.txt  gemm_8x4_7.txt  gemm_cache_block_4x4_8.txt  gemm_cache_block_4x4_9.txt  gemm_cache_block_packA_4x4_8.txt  gemm_cache_block_packA_packB_4x4_8.txt
src/: common.cpp  common.h  main.cpp  timer.h
src/optimize/: gemm_1x1_0.cpp  gemm_1x1_1.cpp  gemm_1x1_2.cpp  gemm_1x1_3.cpp  gemm_4x1_1.cpp  gemm_4x4_2.cpp  gemm_4x4_3.cpp  gemm_4x4_4.cpp  gemm_4x4_5.cpp  gemm_8x4_6.cpp  gemm_8x4_7.cpp  gemm_cache_block_4x4_8.cpp  gemm_cache_block_4x4_9.cpp  gemm_cache_block_packA_4x4_8.cpp  gemm_cache_block_packA_packB_4x4_8.cpp  gemm_ref.cpp
